Fix Default Applications KCM window size

Summary:
Config widgets were loading in when a service item was clicked.
This change loads all config widgets at the start so the window can be sized to the largest widget.

BUG: 398799
FIXED-IN: 5.16.0

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D20072